# BlogSamples

./: README.md
Aidl/: README.md
AnnotationDemo/: .gitignore  build.gradle  settings.gradle
AnnotationDemo/app/: build.gradle  proguard-rules.pro
AnnotationDemo/processorlib/: build.gradle
LifeCycleDemo/: .gitignore  README.md  build.gradle
LifeCycleDemo/app/: build.gradle
LoadImageDemo/: build.gradle
LocationDemo/: build.gradle
OpenCVDemo/: README.md  settings.gradle
OpenCVDemo/app/: CMakeLists.txt  build.gradle
OpenCVDemo/app/src/androidTest/java/org/lynxz/opencvdemo/: ExampleInstrumentedTest.kt
OpenCVDemo/app/src/main/: AndroidManifest.xml
OpenCVDemo/app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h  image_process.cpp
OpenCVDemo/app/src/main/java/org/lynxz/opencvdemo/: DFTUtil.java  Extension.kt  ImageProcessUtils.kt  Logger.kt  MainActivity.kt  OpenCVApplication.kt
OpenCVDemo/app/src/main/java/org/lynxz/opencvdemo/facedetect/: DetectionBasedTracker.java  FdActivity.java
OpenCVDemo/app/src/main/res/layout/: activity_main.xml  face_detect_surface_view.xml
OpenCVDemo/app/src/main/res/raw/: lbpcascade_frontalface.xml
OpenCVDemo/app/src/main/res/values/: strings.xml
OpenCVDemo/app/src/test/java/org/lynxz/opencvdemo/: ExampleUnitTest.kt
OpenCVManagerDemo/: .gitignore  README.md  build.gradle
SvgAnimationDemo/: .gitignore  SvgAnimationDemo.html
TextRelatedDemo/: README.md  build.gradle  gradle.properties
VideoViewDemo/: build.gradle
ViewPagerDemo/: README.md  build.gradle
WebViewDemo/: .gitignore
(+434 files in other folders)
